[package]
name = "hyperbol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wasm-bindgen = "0.2.74"

[dev-dependencies]
tui = "0.19.0"
crossterm = "0.25"
clap = { version = "3.2.20", features = ["derive"] }
walkdir = "2.3.2"
